1-system/5-rustfs/rustfs.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rustfs-virtual-service
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - rustfs.ingress.pcai0201.fr2.hpecolo.net
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: rustfs-svc.unique.svc.cluster.local
            port:
              number: 9001
